# www.oliverbonhamcarter.com

./: .gitmodules  README.md  config.toml  jupyter-lite.json  netlify.toml  netlify_toml_bk.md  netlify_toml_bk2.md  pyproject.toml  requirements.txt
content/: _index.md  clipboard-test.md
content/classes/: _index.md  template.md
content/contactandabout/: _index.md
content/forfun/: _index.md
content/outreach/: 0_onlineResources.md  1_pythonIntro.md  2_plotting.md  3_coolPlots.md  4_t-tests.md  5_ml_basics.md  CoolPlotsAndBasicModels.md  _index.md  coolPlots.md  intro-to-ml.md  python-basics.md  python-data-visualization.md  pythonIntro.md  t-tests.md  tshirtDesigns.md
content/portfolio/: _index.md
content/post/: _index.md
content/projects/: _index.md
content/resources/: Bioinformatics_resources.md  WomenInComputing.md  _index.md  dataanalytics_resources.md  hugoNetlify.md  hugoTutorial.md  juniorseminar_resources.md  jupyterlite.md  writing.md
content/rse/: rse.md
files/: 00-install-packages.ipynb  README.md  data-analytics-01-loading-data.ipynb  data-analytics-02-exploring-data.ipynb  data-analytics-05-correlations.ipynb  hammingCodes.ipynb  pyproject.toml
files/my_analysis_project/: _index.md  data-analytics-03-basic-plots.ipynb  data-analytics-06-advanced-analysis.ipynb  note.txt  seaborn-test.ipynb
layouts/forfun/: list.html
layouts/partials/: footer.html
layouts/projects/: single.html
misc/: README.md
public/: 404.html  index.html  index.xml  sitemap.xml
serve/: 404.html  index.html  index.xml  readme.md  sitemap.xml
(+214 files in other folders)
