[tool.poetry]
name = "jupyterdemo"
version = "0.1.0"
description = ""
authors = ["Oliver Bonham-Carter <obonhamcarter@allegheny.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.9.2"
typer = "^0.12.5"
jupyterlab = "^4.2.5"
jupyterlite = "^0.4.3"
pandas = "^2.2.3"
numpy = "^2.1.2"
pytest = "^8.3.3"
jupytext = "^1.16.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
